tabel responsive done

--- a/themes/socialasset/a_ngo-profile.html
+++ b/themes/socialasset/a_ngo-profile.html
@@ -326,7 +326,7 @@
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
@@ -363,7 +363,7 @@
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
@@ -400,7 +400,7 @@
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
@@ -437,7 +437,7 @@
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
@@ -474,7 +474,7 @@
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
@@ -511,7 +511,7 @@
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
@@ -548,7 +548,7 @@
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
@@ -585,7 +585,7 @@
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
