--- a/themes/socialasset/a_user-profile.html
+++ b/themes/socialasset/a_user-profile.html
@@ -289,7 +289,7 @@
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
@@ -326,7 +326,7 @@
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
@@ -363,7 +363,7 @@
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
