--- a/themes/socialasset/b_ngo-profile-02-campaings.html
+++ b/themes/socialasset/b_ngo-profile-02-campaings.html
@@ -147,8 +147,8 @@
             <div class="ngo-profile-sec-iner width-1115">
               <div class="user-profile-sec-tab">
                 <div class="fl-tabs clearfix">
-                  <button onclick="window.location.href = 'b_ngo-profile-01-my-account.html';"  class="tab-link current"><span>MY NGO’S PROFILE</span></button>
-                  <button onclick="window.location.href = 'b_ngo-profile-02-campaings.html';"  class="tab-link"><span>MY CAMPAIGNS</span></button>
+                  <button onclick="window.location.href = 'b_ngo-profile-01-my-account.html';"  class="tab-link"><span>MY NGO’S PROFILE</span></button>
+                  <button onclick="window.location.href = 'b_ngo-profile-02-campaings.html';"  class="tab-link current"><span>MY CAMPAIGNS</span></button>
                   <button onclick="window.location.href = 'b_ngo-profile-03-create-campaing.html';"  class="tab-link"><span>CREATE A CAMPAIGN</span></button>
                 </div>
               </div>
@@ -188,21 +188,24 @@
                           <tr>
                             <td>
                               <div class="tbl-td">
+                                <strong>Date</strong>
                                 <span class="tbl-date">2/11/2020</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <strong>Category</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Campaign</strong>
                                 <div class="tbl-campaign-des">
                                   <div class="tbl-campaign-img">
                                     <img src="assets/images/tbl-campaign-img.png">
                                   </div>
-                                  <div>
+                                  <div class="tbl-campaign-des-inr">
                                     <strong>The miracle recovery plan for our planet</strong>
                                     <p>Traumatic events can create persistent mental and physical stress. We have 6 year …</p>
                                   </div>
@@ -211,11 +214,13 @@
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Status</strong>
                                 <span class="status-btn status-btn-active">ACTIVE</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Progress</strong>
                                 <div class="ngo-td-progress">
                                   <span>20%</span>
                                 </div>
@@ -225,21 +230,24 @@
                           <tr>
                             <td>
                               <div class="tbl-td">
+                                <strong>Date</strong>
                                 <span class="tbl-date">2/11/2020</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <strong>Category</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Campaign</strong>
                                 <div class="tbl-campaign-des">
                                   <div class="tbl-campaign-img">
                                     <img src="assets/images/tbl-campaign-img.png">
                                   </div>
-                                  <div>
+                                  <div class="tbl-campaign-des-inr">
                                     <strong>The miracle recovery plan for our planet</strong>
                                     <p>Traumatic events can create persistent mental and physical stress. We have 6 year …</p>
                                   </div>
@@ -248,11 +256,13 @@
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Status</strong>
                                 <span class="status-btn status-btn-inactive">DRAFT</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Progress</strong>
                                 <div class="ngo-td-progress">
                                   <span>0%</span>
                                 </div>
@@ -262,21 +272,24 @@
                           <tr>
                             <td>
                               <div class="tbl-td">
+                                <strong>Date</strong>
                                 <span class="tbl-date">2/11/2020</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <strong>Category</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Campaign</strong>
                                 <div class="tbl-campaign-des">
                                   <div class="tbl-campaign-img">
                                     <img src="assets/images/tbl-campaign-img.png">
                                   </div>
-                                  <div>
+                                  <div class="tbl-campaign-des-inr">
                                     <strong>The miracle recovery plan for our planet</strong>
                                     <p>Traumatic events can create persistent mental and physical stress. We have 6 year …</p>
                                   </div>
@@ -285,11 +298,13 @@
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Status</strong>
                                 <span class="status-btn status-btn-pending">PENDING</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Progress</strong>
                                 <div class="ngo-td-progress">
                                   <span>40%</span>
                                 </div>
@@ -299,21 +314,24 @@
                           <tr>
                             <td>
                               <div class="tbl-td">
+                                <strong>Date</strong>
                                 <span class="tbl-date">2/11/2020</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <strong>Category</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Campaign</strong>
                                 <div class="tbl-campaign-des">
                                   <div class="tbl-campaign-img">
                                     <img src="assets/images/tbl-campaign-img.png">
                                   </div>
-                                  <div>
+                                  <div class="tbl-campaign-des-inr">
                                     <strong>The miracle recovery plan for our planet</strong>
                                     <p>Traumatic events can create persistent mental and physical stress. We have 6 year …</p>
                                   </div>
@@ -322,11 +340,13 @@
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Status</strong>
                                 <span class="status-btn status-btn-expired">EXPIRED</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Progress</strong>
                                 <div class="ngo-td-progress ngo-td-progress-full">
                                   <span>100%</span>
                                 </div>
@@ -336,21 +356,24 @@
                           <tr>
                             <td>
                               <div class="tbl-td">
+                                <strong>Date</strong>
                                 <span class="tbl-date">2/11/2020</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <strong>Category</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Campaign</strong>
                                 <div class="tbl-campaign-des">
                                   <div class="tbl-campaign-img">
                                     <img src="assets/images/tbl-campaign-img.png">
                                   </div>
-                                  <div>
+                                  <div class="tbl-campaign-des-inr">
                                     <strong>The miracle recovery plan for our planet</strong>
                                     <p>Traumatic events can create persistent mental and physical stress. We have 6 year …</p>
                                   </div>
@@ -359,11 +382,13 @@
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Status</strong>
                                 <span class="status-btn status-btn-active">ACTIVE</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Progress</strong>
                                 <div class="ngo-td-progress">
                                   <span>20%</span>
                                 </div>
@@ -373,21 +398,24 @@
                           <tr>
                             <td>
                               <div class="tbl-td">
+                                <strong>Date</strong>
                                 <span class="tbl-date">2/11/2020</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <strong>Category</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Campaign</strong>
                                 <div class="tbl-campaign-des">
                                   <div class="tbl-campaign-img">
                                     <img src="assets/images/tbl-campaign-img.png">
                                   </div>
-                                  <div>
+                                  <div class="tbl-campaign-des-inr">
                                     <strong>The miracle recovery plan for our planet</strong>
                                     <p>Traumatic events can create persistent mental and physical stress. We have 6 year …</p>
                                   </div>
@@ -396,11 +424,13 @@
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Status</strong>
                                 <span class="status-btn status-btn-inactive">DRAFT</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Progress</strong>
                                 <div class="ngo-td-progress">
                                   <span>0%</span>
                                 </div>
@@ -410,21 +440,24 @@
                           <tr>
                             <td>
                               <div class="tbl-td">
+                                <strong>Date</strong>
                                 <span class="tbl-date">2/11/2020</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <strong>Category</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Campaign</strong>
                                 <div class="tbl-campaign-des">
                                   <div class="tbl-campaign-img">
                                     <img src="assets/images/tbl-campaign-img.png">
                                   </div>
-                                  <div>
+                                  <div class="tbl-campaign-des-inr">
                                     <strong>The miracle recovery plan for our planet</strong>
                                     <p>Traumatic events can create persistent mental and physical stress. We have 6 year …</p>
                                   </div>
@@ -433,11 +466,13 @@
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Status</strong>
                                 <span class="status-btn status-btn-pending">PENDING</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Progress</strong>
                                 <div class="ngo-td-progress">
                                   <span>40%</span>
                                 </div>
@@ -447,21 +482,24 @@
                           <tr>
                             <td>
                               <div class="tbl-td">
+                                <strong>Date</strong>
                                 <span class="tbl-date">2/11/2020</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <strong>Category</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Campaign</strong>
                                 <div class="tbl-campaign-des">
                                   <div class="tbl-campaign-img">
                                     <img src="assets/images/tbl-campaign-img.png">
                                   </div>
-                                  <div>
+                                  <div class="tbl-campaign-des-inr">
                                     <strong>The miracle recovery plan for our planet</strong>
                                     <p>Traumatic events can create persistent mental and physical stress. We have 6 year …</p>
                                   </div>
@@ -470,11 +508,13 @@
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Status</strong>
                                 <span class="status-btn status-btn-expired">EXPIRED</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Progress</strong>
                                 <div class="ngo-td-progress ngo-td-progress-full">
                                   <span>100%</span>
                                 </div>
