--- a/themes/socialasset/b_user-profile-02-my-account.html
+++ b/themes/socialasset/b_user-profile-02-my-account.html
@@ -173,21 +173,24 @@
                           <tr>
                             <td>
                               <div class="tbl-td">
+                                <strong>Date</strong>
                                 <span class="tbl-date">2/11/2020</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <strong>Category</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Campaign</strong>
                                 <div class="tbl-campaign-des">
                                   <div class="tbl-campaign-img">
                                     <img src="assets/images/tbl-campaign-img.png">
                                   </div>
-                                  <div>
+                                  <div class="tbl-campaign-des-inr">
                                     <strong>The miracle recovery plan for our planet</strong>
                                     <p>Traumatic events can create persistent mental and physical stress. We have 6 year …</p>
                                   </div>
@@ -196,11 +199,13 @@
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Status</strong>
                                 <span class="status-btn status-btn-active">ACTIVE</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>NGO</strong>
                                 <div class="ngo-logo">
                                   <img src="assets/images/ngo-logo.png">
                                 </div>
@@ -210,21 +215,24 @@
                           <tr>
                             <td>
                               <div class="tbl-td">
+                                <strong>Date</strong>
                                 <span class="tbl-date">2/11/2020</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <strong>Category</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Campaign</strong>
                                 <div class="tbl-campaign-des">
                                   <div class="tbl-campaign-img">
                                     <img src="assets/images/tbl-campaign-img.png">
                                   </div>
-                                  <div>
+                                  <div class="tbl-campaign-des-inr">
                                     <strong>The miracle recovery plan for our planet</strong>
                                     <p>Traumatic events can create persistent mental and physical stress. We have 6 year …</p>
                                   </div>
@@ -233,11 +241,13 @@
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Status</strong>
                                 <span class="status-btn status-btn-inactive">INACTIVE</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>NGO</strong>
                                 <div class="ngo-logo">
                                   <img src="assets/images/ngo-logo.png">
                                 </div>
@@ -247,21 +257,24 @@
                           <tr>
                             <td>
                               <div class="tbl-td">
+                                <strong>Date</strong>
                                 <span class="tbl-date">2/11/2020</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
-                                <strong class="tbl-cat-name">HUMAN</strong>
+                                <strong>Category</strong>
+                                <span class="tbl-cat-name">HUMAN</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Campaign</strong>
                                 <div class="tbl-campaign-des">
                                   <div class="tbl-campaign-img">
                                     <img src="assets/images/tbl-campaign-img.png">
                                   </div>
-                                  <div>
+                                  <div class="tbl-campaign-des-inr">
                                     <strong>The miracle recovery plan for our planet</strong>
                                     <p>Traumatic events can create persistent mental and physical stress. We have 6 year …</p>
                                   </div>
@@ -270,11 +283,13 @@
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>Status</strong>
                                 <span class="status-btn status-btn-active">ACTIVE</span>
                               </div>
                             </td>
                             <td>
                               <div class="tbl-td">
+                                <strong>NGO</strong>
                                 <div class="ngo-logo">
                                   <img src="assets/images/ngo-logo.png">
                                 </div>
