account , ngo , business, user page responsive done

--- a/themes/socialasset/b_ngo-profile-01-my-account.html
+++ b/themes/socialasset/b_ngo-profile-01-my-account.html
@@ -153,7 +153,7 @@
                 </div>
               </div>
               <div id="tab-1" class="">
-                <div class="tab-con-inr">
+                <div class="tab-con-inr xs-center-width">
                   <div class="profile-is-draft">
                     <p><strong>Your profile is DRAFT</strong>   Lorem ipsum donor sit met.</p>
                     <i class="fas fa-times"></i>
