--- a/themes/socialasset/b_business-profile-01-my-account.html
+++ b/themes/socialasset/b_business-profile-01-my-account.html
@@ -152,7 +152,7 @@
                 </div>
               </div>
               <div id="tab-1" class="">
-                <div class="tab-con-inr">
+                <div class="tab-con-inr xs-center-width">
                   <div class="tab-con-title">
                     <strong>My Account</strong>
                   </div>
