account page responsive done

--- a/themes/socialasset/a_modal.html
+++ b/themes/socialasset/a_modal.html
@@ -39,7 +39,7 @@
   <div class="continer">
     <div class="row">
       <div class="col-sm-12">
-        <div>
+        <div class="text-center">
           <a id="quickViewOpener" href="#" class="btn btn-primary" data-toggle="modal" data-target="#quickViewModal">User – campaign page – popup-personal details</a>
         </div>
       </div>
