--- a/themes/socialasset/what-we-do.html
+++ b/themes/socialasset/what-we-do.html
@@ -140,16 +140,16 @@
 </header>
 
 
-<section class="page-banner has-button">
+<section class="page-banner">
   <div class="page-banner-controller" style="overflow: hidden;">
-    <div class="page-banner-bg" style="background-image:url(assets/images/wwd-banner.png); min-height: 543px">
-      <div class="page-banner-des">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="page-banner-des-inner">
-                <h1 class="banner-page-title">What We Do</h1>
-              </div>
+    <div class="page-banner-bg" style="background-image:url(assets/images/wwd-banner.png);">
+    </div>
+    <div class="page-banner-des">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="page-banner-des-inner">
+              <h1 class="banner-page-title">What We Do</h1>
             </div>
           </div>
         </div>
