--- a/themes/socialasset/about-us.html
+++ b/themes/socialasset/about-us.html
@@ -149,7 +149,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="page-banner-des-inner">
-              <h1 class="banner-page-title">We Help People Support NGOs <br/>& Solve Social Problems</h1>
+              <h1 class="banner-page-title abt-page-title">We Help People Support NGOs <br/>& <span>Solve Social Problems</span></h1>
             </div>
           </div>
         </div>
